@@ -1,6 +1,6 @@
 #!/usr/bin/perl
 
-# @(#)$Id: 11lock.t 62 2008-04-11 01:20:52Z pjf $
+# @(#)$Id: 03podcoverage.t 428 2009-04-05 17:44:30Z pjf $
 
 use strict;
 use warnings;
@@ -9,8 +9,19 @@ use FindBin  qw( $Bin );
 use lib (catdir( $Bin, updir, q(lib) ));
 use Test::More;
 
+BEGIN {
+   if (!-e catfile( $Bin, updir, q(MANIFEST.SKIP) )) {
+      plan skip_all => 'POD coverage test only for developers';
+   }
+}
+
 eval "use Test::Pod::Coverage 1.04";
 
-plan skip_all => 'Test::Pod::Coverage 1.04 required' if $@;
+plan skip_all => 'Test::Pod::Coverage 1.04 required' if ($@);
 
 all_pod_coverage_ok();
+
+# Local Variables:
+# mode: perl
+# tab-width: 3
+# End:
